#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_CONFIG_LIBOBJ_DIR([libs])
#AC_CONFIG_MACRO_DIR([m4])

#AC_PREREQ(2.60)
AC_INIT(epd, 0.1, pag@bar.com)
AC_CONFIG_SRCDIR([src/dynamics/Body.cpp])
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AC_CONFIG_HEADER([hdr/config.h])
AM_INIT_AUTOMAKE([subdir-objects])

# Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
AM_PROG_LIBTOOL

# Checks for header files.


# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
